archive/z_will_delete_script/minerva-kubernetes/expert-config-template/expert-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expert-ui
  namespace: expert
spec:
  selector:
    matchLabels:
      app: deployment-expert-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-expert-ui
    spec:
      containers:
      - name: expert-ui
        image: IMAGE_BASEURL_PLACEHOLDER/expert/expert_ui:IMAGE_VERSION_PLACEHOLDER
        imagePullPolicy: Always
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: EXPERT_NODE_SELECTOR_PLACEHOLDER
