archive/z_will_delete_script/minerva-kubernetes/expert-config-template/expert-ui/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-expert-ui
  namespace: expert
spec:
  selector:
    app: deployment-expert-ui
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
